[tool.poetry]
name = "promotion-counters"
version = "0.1.0"
description = ""
authors = ["rukosenpa <daniktarasov@gmail.com>"]
readme = "README.md"
packages = [{include = "promotion_counters"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

